# SPOT_ego_Velocity

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: spot_roll.launch.py
msg/: FootState.msg  FootStateArray.msg
src/: main.cpp
